infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qapabilities
  labels:
    name: qapabilities
    environment: production
